--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Massachusetts Videography & Photography | Shooting Star Productions"
+      content="Massachusetts & Florida Videography & Photography | Shooting Star Productions"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
